[workspace]
members = ["chat_core", "chat_server", "chat_test", "notify_server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.92"
axum = { version = "0.7.7", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
    # "macros",
] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
chat-core = { path = "./chat_core" }
chat-server = { path = "./chat_server" }
jwt-simple = "0.12.9"
notify-server = { path = "./notify_server" }
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "chrono",
    "tls-rustls",
] }
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = [
    "compression-full",
    "fs",
    "trace",
] }
